src/test/resources/testinput/parsable/symtab/invalid_coco/comprehension5.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl comprehension5 {
  context Auction a inv MessageTimes:
    let
      List<Long> tlist = [m.time | m in a.message, m.time.lessThan(a.startTime)]
    in
      true;
}
